dimagi-SalesforceFB/src/objects/Report_Delivery_Info__c.object
<CustomObject>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <label>Email Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_body__c</fullName>
        <label>Email body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Field_Id__c</fullName>
        <label>Field Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Report Delivery Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RDI-{0}</displayFormat>
        <label>Report Delivery Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Delivery Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>